// Vitest Snapshot v1

exports[`use default layout 1`] = `
"
<template>
  <layout-default-uni>
    <div>hello</div>
  </layout-default-uni>
</template>
"
`;

exports[`use inline layout 1`] = `
"
<template>
  <layout-camel-layout-uni>
    <main></main>
  </layout-camel-layout-uni>
</template>
"
`;

exports[`use test layout 1`] = `
"
<template>
  <layout-kebab-layout-uni>
    <main></main>
  </layout-kebab-layout-uni>
</template>
"
`;
